Edited JAVA_OPTS